<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicstructureapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/main_txt" />

    <Button
        android:id="@+id/albums_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/albums" />

    <Button
        android:id="@+id/songs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songs" />

    <Button
        android:id="@+id/playlists_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlists" />

    <Button
        android:id="@+id/payment__button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_a_song" />

</LinearLayout>
